--- a/article.html
+++ b/article.html
@@ -80,7 +80,7 @@
                     <td>There are high rates of reported plagiarism in academic research, prompting some universities to implement strict disciplinary actions against students and researchers who are caught plagiarizing.</td>
                 </tr>
                 <tr>
-                    <td><b>India:</b></td>
+                    <td><b>India</b></td>
                     <td>In certain cases, plagiarism has led to legal action, which may include potential jail time, depending on the severity and context of the offense.</td>
                 </tr>
             </table>
