--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>E2 Computer: Jeresano</title>
-    <meta name="description" content="This is a website created by Howell Darcy B. Jeresano, it includes her Autobiography and Lab Exercises">
+    <meta name="description" content="This is a website created by Howell Darcy B. Jeresano, it includes his Autobiography and Lab Exercises">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
